--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^2.2.7",
+    "@stripe/react-stripe-js": "^3.8.1",
+    "@stripe/stripe-js": "^7.7.0",
     "firebase": "^12.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.7.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
